feat: add color settings and optimize performance
- Add settings container with color options in UI
- Implement tab visibility handling to pause/resume animations
- Move 3D components to dedicated worlds folder
- Rename gui-container to debug-container
- Add user-select: none to UI containers
- Update project structure and imports
- Add new color variables and styles

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,13 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": [
+    "src",
+    "worlds/world/World.ts",
+    "worlds/world/components/donuts",
+    "worlds/world/components/shootingStar",
+    "worlds/world/components/text",
+    "worlds/components/camera.ts",
+    "worlds/world/components/scene.ts"
+  ]
 }
